# altv-angelscript-module

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-client.bat  build-server.bat  build.bat  build.sh  format.bat  format.sh  update-sdk.bat
.github/workflows/: cmake.yml  codeql.yml  release.yml
cmake/: DebugConfig.cmake  DownloadDeps.cmake
docs/: altClientDocs.as  altDocs.as  altServerDocs.as  cryptoDocs.as  fileDocs.as  httpDocs.as  jsonDocs.as  nativesDocs.as  utilDocs.as
src/: main.cpp  main.h  resource.cpp  resource.h  runtime.cpp  runtime.h
src/bindings/: alt.cpp  baseobject.cpp  baseobject.h  entity.cpp  entity.h  natives.cpp  player.cpp  rgba.h  std.cpp  vector2.h  vector3.cpp  vector3.h  vehicle.cpp  worldobject.cpp  worldobject.h
src/bindings/addons/: crypto.cpp  file.cpp  http.cpp  json.cpp  util.cpp
src/bindings/addons/crypto/: crypto.cpp  encrypt.h  hash.h
src/bindings/addons/http/: client.h  http.cpp  result.h
src/bindings/addons/json/: array.h  dict.h  generic.h  json.cpp
src/bindings/data/: benchmark.h  clothes.h  discord.cpp  discord.h  hash.cpp  keyState.cpp  keyState.h  permission.h  props.h  rgba.cpp  rgba.h  scriptId.cpp  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vehicleNeon.cpp  vehicleNeon.h
src/bindings/entities/: baseObject.cpp  baseObject.h  baseobject.h  blip.cpp  colShape.cpp  colShape.h  entity.cpp  entity.h  localPlayer.cpp  player.cpp  player.h  vehicle.cpp  voiceChannel.cpp  webView.cpp  worldObject.h  worldobject.cpp  worldobject.h
src/bindings/enums/: WeaponTint.cpp  WeatherType.cpp  baseObjectType.cpp  colShapeType.cpp  weaponTint.cpp  weatherType.cpp
src/bindings/std/: any.cpp  array.cpp  datetime.cpp  dict.cpp  exceptions.cpp  handle.cpp  math.cpp  regex.cpp  string.cpp
src/events/: entity.cpp  main.cpp  meta.cpp  player.cpp  vehicle.cpp
src/helpers/: angelscript.h  benchmark.h  bytecode.h  convert.h  dllImport.cpp  dllImport.h  docs.h  events.cpp  events.h  libImport.cpp  libImport.h  module.cpp  module.h  timer.cpp  timer.h  typeInfoCache.h
tools/: build-client.bat  build-server.bat  build.sh  format.bat  format.sh  update-sdk.bat  update-sdk.sh
